ja/6.0/user/search-sort.rst
============
検索のソート
============

ソート検索
==========

検索日時などのフィールドを指定して検索結果をソートすることができます。

ソート対象フィールド
--------------------

デフォルトでは以下のフィールドを指定してソートすることができます。

+-----------------+----------------------------------------+
| tstamp          | クロールした日時                       |
+-----------------+----------------------------------------+
| contentLength   | クロールしたコンテンツサイズ           |
+-----------------+----------------------------------------+
| lastModified    | クロールしたコンテンツの最終更新日時   |
+-----------------+----------------------------------------+

Table: ソート対象フィールド一覧

</table>
カスタマイズすることで独自のフィールドをソート対象として追加することもできます。

利用方法
--------

検索時にソート条件を選択することができます。

|image0|

また、検索フィールドでソートをする場合は、「sort:フィールド名」のようにsortとフィールド名をコロン(:)で区切って検索フォームに入力して検索します。

以下は Fess を検索語として、コンテンツサイズを昇順にソートします。

::

    Fess sort:contentLength

降順にソートする場合は以下のようにします。

::

    Fess sort:contentLength.desc

複数のフィールドでソートする場合は以下のように , 区切りで指定します。

::

    Fess sort:contentLength.desc,lastModified

.. |image0| image:: ../../../resources/images/ja/6.0/user/search-sort-1.png
